--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,8 +49,7 @@
     <string name="title_activity_edit_tracking">EditTrackingActivity</string>
     <string name="suggest_tracking">Suggest Tracking</string>
     <string name="settings">Settings</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="trackables_list">Trackables List</string>
+    <string name="trackings_list">Trackings List</string>
 
 </resources>
